[gd_scene load_steps=19 format=3 uid="uid://d368mav5vc8k4"]

[ext_resource type="PackedScene" uid="uid://demr2cd0vql4a" path="res://scenes/enemies/enemy.tscn" id="1_bti7m"]
[ext_resource type="Texture2D" uid="uid://cyk5f1fwb5wti" path="res://art/characters/Enemies/Wanderer/monster_000_bodies01 — копия.png" id="2_6jytl"]
[ext_resource type="Script" uid="uid://cjfca2d5a2wnw" path="res://scenes/enemies/Gaper/gaper.gd" id="2_nl6x5"]
[ext_resource type="Resource" uid="uid://d0w5bvub6jv1w" path="res://resources/stats/enemies/gaper_stats.tres" id="3_7ftk0"]
[ext_resource type="Script" uid="uid://bvs7wqr1gyc01" path="res://scenes/enemies/Gaper/walking_state.gd" id="3_w7qp5"]
[ext_resource type="Texture2D" uid="uid://d1omeqaur4moe" path="res://art/characters/Enemies/StillHead/monster_017_gaper.png" id="4_2fccd"]
[ext_resource type="PackedScene" uid="uid://cw8tl1j433lft" path="res://scenes/enemies/Gaper/death_effect/entity_death_effect.tscn" id="4_r2hvn"]
[ext_resource type="Script" uid="uid://c5cic0ssj22it" path="res://scenes/enemies/Gaper/launch_state.gd" id="5_ipb2c"]
[ext_resource type="Script" uid="uid://b5fyknewgitsv" path="res://components/flash_component.gd" id="7_rgqkv"]

[sub_resource type="CircleShape2D" id="CircleShape2D_7ftk0"]
radius = 7.2111

[sub_resource type="CircleShape2D" id="CircleShape2D_r2hvn"]
radius = 7.0

[sub_resource type="CircleShape2D" id="CircleShape2D_rgqkv"]
radius = 4.0

[sub_resource type="Animation" id="Animation_b3duy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_rgqkv"]
resource_name = "body_down"
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1.5, 1.6, 1.7, 1.8, 1.9, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 8, 9, 10, 11, 16, 17, 15, 16, 17, 18, 19, 23]
}

[sub_resource type="Animation" id="Animation_qswt2"]
resource_name = "body_left"
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [18, 19, 24, 25, 26, 27, 32, 33, 34, 35]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_2ltm5"]
resource_name = "body_right"
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [18, 19, 24, 25, 26, 27, 32, 33, 34, 35]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_b3duy"]
_data = {
&"RESET": SubResource("Animation_b3duy"),
&"body_down": SubResource("Animation_rgqkv"),
&"body_left": SubResource("Animation_qswt2"),
&"body_right": SubResource("Animation_2ltm5")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_b3duy"]
radius = 5.09902

[node name="Gaper" instance=ExtResource("1_bti7m")]
collision_mask = 4
script = ExtResource("2_nl6x5")

[node name="CollisionShape2D" parent="." index="0"]
shape = SubResource("CircleShape2D_7ftk0")

[node name="Sprite2D" parent="." index="1"]
animation = &""

[node name="StatsComponent" parent="." index="2"]
black_health = 10

[node name="MoveComponent" parent="." index="3"]
physics_interpolation_mode = 2
stats = ExtResource("3_7ftk0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent" index="0"]
position = Vector2(0, 2)
shape = SubResource("CircleShape2D_r2hvn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent" index="0"]
position = Vector2(0, 2)
shape = SubResource("CircleShape2D_rgqkv")

[node name="DestroyedComponent" parent="." index="7" node_paths=PackedStringArray("destroy_effect_spawner_component")]
destroy_effect_spawner_component = NodePath("../SpawnerComponent")

[node name="SpawnerComponent" parent="." index="8"]
scene = ExtResource("4_r2hvn")

[node name="StateMachine" parent="." index="9" node_paths=PackedStringArray("initial_state")]
initial_state = NodePath("LaunchState")

[node name="LaunchState" type="Node" parent="StateMachine" index="0" node_paths=PackedStringArray("launch_effect_spawner_component")]
script = ExtResource("5_ipb2c")
launch_effect_spawner_component = NodePath("../../LaunchEffectSpawnerComponent")

[node name="WalkingState" type="Node" parent="StateMachine" index="1"]
script = ExtResource("3_w7qp5")
state = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="StateMachine/WalkingState" index="0"]
root_node = NodePath("../../..")
libraries = {
&"": SubResource("AnimationLibrary_b3duy")
}

[node name="FlashComponent" parent="." index="10" node_paths=PackedStringArray("sprite")]
sprite = NodePath("../Head")

[node name="FlashComponent2" type="Node" parent="." index="11" node_paths=PackedStringArray("sprite")]
script = ExtResource("7_rgqkv")
sprite = NodePath("../Body")
metadata/_custom_type_script = "uid://b5fyknewgitsv"

[node name="Body" type="Sprite2D" parent="." index="12"]
position = Vector2(0, 1)
texture = ExtResource("2_6jytl")
flip_h = true
hframes = 8
vframes = 5

[node name="Head" type="Sprite2D" parent="." index="13"]
z_index = 1
position = Vector2(0, -10)
texture = ExtResource("4_2fccd")
hframes = 2
vframes = 2
frame = 1

[node name="SoftCollision" parent="." index="14"]
y_sort_enabled = true

[node name="CollisionShape2D2" type="CollisionShape2D" parent="SoftCollision" index="1"]
position = Vector2(0, 4)
shape = SubResource("CircleShape2D_b3duy")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="." index="16"]

[node name="NavigationTimer" type="Timer" parent="." index="17"]
wait_time = 0.5
autostart = true

[node name="Marker2D" parent="." index="18"]
position = Vector2(0, 4)
